hot fix dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,6 @@ select {
 .dark input,
 .dark textarea,
 .dark select {
-  /* background-color: hsl(214, 6%, 12%); */
   background-color: transparent;
   border-color: hsl(214, 5%, 40%);
   color: hsl(214, 12%, 92%);
@@ -165,9 +164,6 @@ textarea {
   height: auto;
   line-height: 1.15;
   padding: 0.35rem 0.55rem;
-}
-.icon-button {
-  /*  */
 }
 .flex-parent {
   display: flex;
@@ -200,15 +196,13 @@ p.helper {
   color: #820014;
 }
 .dark .error {
-  color: #ffccc7;
-  /* #ffa39e #ff7875 */
+  color: #ffa39e;
 }
 .valid {
   color: #237804;
 }
 .dark .valid {
-  color: #d9f7be;
-  /* #b7eb8f #95de64 */
+  color: #b7eb8f;
 }
 .extra-text {
   display: none;
